# drfp

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  LICENSE.txt  README.md  README.rst  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package-conda.yml  tests.yml
data/az/: az_no_rdkit.csv  train_test_idxs.pickle
docs/: conf.py  index.rst
models/model_data/: FullCV_01-2048-3-true.map.pkl
notebooks/: 01_fingerprinting.ipynb  02_model_explainability.ipynb  03_more_model_explainability.ipynb  0a_figures.ipynb  buchwald_hartwig.map.pkl  buchwald_hartwig_cv.eps  drfp-schneider-cm.html  drfp-schneider-cm.pickle  drfp-schneider-errors.csv  environment.yml  reaction_drfps.pkl  reaction_drfps.pkl.map  reaction_smiles.csv
scripts/encoding/: encode_az_reactions.py  encode_buchwald_hartwig_reactions.py  encode_preprocessed.py  encode_suzuki_miyaura_reactions.py
scripts/training/: drfp-schneider-cm.html  drfp-schneider-cm.pickle  knn_rxn_classification.py  mlp_rxn_classification.py  mlp_rxn_classification_schneider.py  save_bh_yield_pred_model.py  uspto_above_above.csv  uspto_below_below.csv  yield_prediction.py  yield_prediction_az.py  yield_prediction_az_mlp.py  yield_prediction_uspto.py
scripts/visualisation/: create_schneider_tmap.py
src/drfp/: __init__.py  cli.py  fingerprint.py  skeleton.py
tests/: conftest.py  test_fingerprint.py  test_skeleton.py
