[project]
name = "drfp"
dynamic = ["version"]
description = "An NLP-inspired chemical reaction fingerprint based on basic set arithmetic."
authors = [
    {name = "Daniel Probst", email = "daniel.probst@hey.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "tqdm",
    "click",
    "xgboost",
    "openpyxl",
    "numpy>=2.2.2",
    "rdkit>=2024.9.4",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "tox>=4.24.1",
]


[project.urls]
Documentation = "https://github.com/reymond-group/drfp"
Source = "https://github.com/reymond-group/drfp"
Twitter = "https://twitter.com/skepteis"

[project.scripts]
drfp = "drfp.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.pytest]
addopts = "--cov drfp --cov-report term-missing --verbose"
testpaths = ["tests"]
norecursedirs = ["dist", "build", ".tox"]

[tool.ruff]
line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".tox",
    "build",
    "dist",
    ".eggs",
    "docs/conf.py",
]
